--- a/consulado_app/public/main_res_aire.html
+++ b/consulado_app/public/main_res_aire.html
@@ -29,7 +29,11 @@
     </header>
 
     <main>
-        <h2>Bienvenido Usuario</h2>
+        <div class="log">
+            <h2>Bienvenido Usuario</h2>
+            <a href="#" class="logout">Cerrar Sessión</a>
+        </div>
+        
         <div class="opciones">
             <a href="#">Programar cita Certificaciones</a>
             <a href="#">Progamar cita Urgente</a>
